Move guid and settings to base.
The Settings class already had an exportTo of 'base' so it was
just in the wrong folder. I moved the GUID class as it has
nothing, directly, to do with tracing and is more core functionality.

--- a/trunk/src/base/settings_test.html
+++ b/trunk/src/base/settings_test.html
@@ -13,9 +13,9 @@ found in the LICENSE file.
 <script>
 'use strict';
 
+base.require('base.settings');
 base.require('base.unittest');
 base.require('tracing.test_utils');
-base.require('tracing.settings');
 
 function testSetGetString() {
   var settings = new base.Settings();
