--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -43,6 +43,9 @@ found in the LICENSE file.
   <div class="test" src="../test_data/android_systrace.html">
   </div>
 
+  <div class="test" src="../test_data/v8.log">
+  </div>
+
   <script>
     base.require('about_tracing.profiling_view'); /* For deps */
     base.require('tracing.timeline_view');
