--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -13,8 +13,9 @@ found in the LICENSE file.
     'base/color_test.html',
     'base/gl_matrix_test.html',
     'base/range_test.html',
-    'base/unittest_test.html',
+    'base/settings_test.html',
     'base/sorted_array_utils_test.html',
+    'base/unittest_test.html',
 
     'ui_test.html',
     'ui/overlay_test.html',
@@ -32,7 +33,6 @@ found in the LICENSE file.
     'tracing/filter_test.html',
     'tracing/find_control_test.html',
     'tracing/selection_test.html',
-    'tracing/settings_test.html',
     'tracing/timeline_track_view_test.html',
     'tracing/timeline_view_test.html',
     'tracing/timeline_viewport_test.html',
