--- a/trunk/src/tracing/category_filter_dialog_test.html
+++ b/trunk/src/tracing/category_filter_dialog_test.html
@@ -11,10 +11,10 @@ found in the LICENSE file.
 </head>
 <body>
   <script>
+    base.require('base.settings');
     base.require('base.unittest');
     base.require('tracing.test_utils');
     base.require('tracing.category_filter_dialog');
-    base.require('tracing.settings');
   </script>
   <script>
     'use strict';
