Move quads to ui

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -21,12 +21,12 @@ found in the LICENSE file.
     'ui/overlay_test.html',
     'ui/list_and_associated_view_test.html',
     'ui/list_view_test.html',
+    'ui/quad_view_test.html',
+    'ui/quad_view_viewport_test.html',
 
     'about_tracing/profiling_view_test.html',
     'about_tracing/tracing_controller_test.html',
 
-    'cc/quad_view_test.html',
-    'cc/quad_view_viewport_test.html',
     'cc/layer_tree_host_impl_view_test.html',
 
     'tracing/category_filter_dialog_test.html',
