--- a/trunk/src/ui/quad_view_viewport_test.html
+++ b/trunk/src/ui/quad_view_viewport_test.html
@@ -10,14 +10,14 @@ found in the LICENSE file.
 <script>
   base.require('base.unittest');
   base.require('base.bbox2');
-  base.require('cc.quad_view_viewport');
+  base.require('ui.quad_view_viewport');
 </script>
 </head>
 <body>
 <script>
     'use strict';
 
-    var QuadViewViewport = cc.QuadViewViewport;
+    var QuadViewViewport = ui.QuadViewViewport;
 
     function testBasicsHighDPI() {
       var bbox = new base.BBox2();
