--- a/trunk/src/tracing/importer/trace_event_importer_test.html
+++ b/trunk/src/tracing/importer/trace_event_importer_test.html
@@ -942,6 +942,31 @@ function testImportImplicitObjects() {
   assertEquals(20, subObject2.snapshots[0].ts);
 }
 
+function testImportIDRefs() {
+  var events = [
+    // An object with two snapshots.
+    {ts: 10000, pid: 1, tid: 1, ph: 'N', cat: 'c', id: "0x1000", name: 'a', args: {}},
+    {ts: 15000, pid: 1, tid: 1, ph: 'O', cat: 'c', id: "0x1000", name: 'a', args: {snapshot: 15}},
+    {ts: 20000, pid: 1, tid: 1, ph: 'O', cat: 'c', id: "0x1000", name: 'a', args: {snapshot: 20}},
+    {ts: 50000, pid: 1, tid: 1, ph: 'D', cat: 'c', id: "0x1000", name: 'a', args: {}},
+
+    // A slice that references the object.
+    {ts: 17000, pid: 1, tid: 1, ph: 'B', cat: 'c', name: 'taskSlice', args: {
+      my_object: {id_ref: '0x1000'}
+    }},
+    {ts: 17500, pid: 1, tid: 1, ph: 'E', cat: 'c', name: 'taskSlice', args: {}}
+  ];
+
+  var m = new tracing.Model();
+  m.importTraces([events], false);
+  var p1 = m.processes[1];
+
+  var iA = p1.objects.getObjectInstanceAt('0x1000', 10)
+  var s15 = iA.getSnapshotAt(15);
+
+  var taskSlice = p1.threads[1].slices[0];
+  assertEquals(s15, taskSlice.args.my_object);
+}
 
 // TODO(nduca): one slice, two threads
 // TODO(nduca): one slice, two pids
