Add an ObjectSnapshot type registration system in style of ObjectInstance
This allows ObjectSnapshot subtypes to be defined and automatically
created.

--- a/trunk/src/tracing/model/object_instance_test.html
+++ b/trunk/src/tracing/model/object_instance_test.html
@@ -36,6 +36,28 @@ found in the LICENSE file.
     assertEquals(sB, instance.getSnapshotAt(50));
     assertEquals(sB, instance.getSnapshotAt(59.9));
   }
+
+  function testSnapshotTypeRegistry() {
+    function MySnapshot() {
+      tracing.model.ObjectSnapshot.apply(this, arguments);
+      this.myFoo = this.args.foo;
+    }
+    MySnapshot.prototype = {
+      __proto__: tracing.model.ObjectSnapshot.prototype,
+    };
+
+    var instance = new tracing.model.ObjectInstance(
+      {}, '0x1000', 'cat', 'MySnapshot', 10);
+    try {
+      tracing.model.ObjectSnapshot.register('MySnapshot', MySnapshot);
+      var snapshot = instance.addSnapshot(15, {foo: 'bar'});
+      assertTrue(snapshot instanceof MySnapshot);
+      assertEquals('bar', snapshot.myFoo);
+    } finally {
+      tracing.model.ObjectSnapshot.unregister('MySnapshot');
+    }
+  }
+
 </script>
 </body>
 </html>
