--- a/trunk/src/tracing/importer/trace_event_importer_test.html
+++ b/trunk/src/tracing/importer/trace_event_importer_test.html
@@ -1002,6 +1002,52 @@ function testImportIDRefsThatPointAtEachOther() {
   assertEquals(foo15, taskSlice.args.my_object);
 }
 
+function testImportDoesNotMutateEventList() {
+  var events = [
+    // An object.
+    {ts: 10000, pid: 1, tid: 1, ph: 'N', cat: 'c', id: "0x1000", name: 'a', args: {}},
+    {ts: 15000, pid: 1, tid: 1, ph: 'O', cat: 'c', id: "0x1000", name: 'a', args: {
+      snapshot: {foo: 15}}},
+    {ts: 50000, pid: 1, tid: 1, ph: 'D', cat: 'c', id: "0x1000", name: 'a', args: {}},
+
+    // A slice that references the object.
+    {ts: 17000, pid: 1, tid: 1, ph: 'B', cat: 'c', name: 'taskSlice', args: {
+      my_object: {id_ref: '0x1000'}
+    }},
+    {ts: 17500, pid: 1, tid: 1, ph: 'E', cat: 'c', name: 'taskSlice', args: {}}
+  ];
+
+  // The A type family exists to mutate the args list provided to
+  // snapshots.
+  function ASnapshot() {
+    tracing.model.ObjectSnapshot.apply(this, arguments);
+    this.args.foo = 7;
+  }
+  ASnapshot.prototype = {
+    __proto__: tracing.model.ObjectSnapshot.prototype,
+  };
+
+  // Import event while the A types are registered, causing the
+  // arguments of the snapshots to be mutated.
+  var m = new tracing.Model();
+  try {
+    tracing.model.ObjectSnapshot.register('a', ASnapshot);
+    m.importTraces([events], false);
+  } finally {
+    tracing.model.ObjectSnapshot.unregister('a');
+  }
+  assertEquals(0, m.importErrors.length);
+
+  // Verify that the events array wasn't modified.
+  assertObjectEquals(
+    events[1].args,
+    {snapshot: {foo: 15}});
+  assertObjectEquals(
+    events[3].args,
+    {my_object: {id_ref: '0x1000'}});
+}
+
+
 // TODO(nduca): one slice, two threads
 // TODO(nduca): one slice, two pids
 </script>
