Switch from using JSON.stringify to GenericObjectView
This allows a mix of JSON with AnalysisLinks

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -36,6 +36,7 @@ body {
 <link rel="stylesheet" href="about_tracing/tracing_controller.css">
 <link rel="stylesheet" href="tracing/analysis/analyze_slices.css">
 <link rel="stylesheet" href="tracing/analysis/analysis_link.css">
+<link rel="stylesheet" href="tracing/analysis/generic_object_view.css">
 <link rel="stylesheet" href="tracing/analysis/analysis_results.css">
 <link rel="stylesheet" href="tracing/analysis/default_object_view.css">
 <link rel="stylesheet" href="tracing/analysis/analysis_view.css">
