--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -42,6 +42,7 @@ found in the LICENSE file.
     'tracing/analysis/analyze_slices_test.html',
     'tracing/analysis/analyze_counters_test.html',
     'tracing/analysis/default_object_view_test.html',
+    'tracing/analysis/generic_object_view_test.html',
 
     'tracing/model_test.html',
     'tracing/model/async_slice_group_test.html',
