--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -28,6 +28,7 @@ found in the LICENSE file.
     'about_tracing/tracing_controller_test.html',
 
     'cc/layer_tree_host_impl_view_test.html',
+    'cc/util_test.html',
 
     'tracing/category_filter_dialog_test.html',
     'tracing/filter_test.html',
