--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -12,6 +12,7 @@ found in the LICENSE file.
     'base/bbox2_test.html',
     'base/color_test.html',
     'base/gl_matrix_test.html',
+    'base/quad_test.html',
     'base/range_test.html',
     'base/settings_test.html',
     'base/sorted_array_utils_test.html',
