--- a/trunk/src/base/gl_matrix_test.html
+++ b/trunk/src/base/gl_matrix_test.html
@@ -16,42 +16,7 @@ found in the LICENSE file.
 <script>
   'use strict';
 
-  function testPointInTri() {
-    var res = base.pointInTriangle2Pt(
-      {x: 0.25, y: 0.25},
-      {x: 0, y: 0},
-      {x: 1, y: 0},
-      {x: 0, y: 1});
-    assertTrue(res);
-  }
-
-  function testPointNotInTri() {
-    var res = base.pointInTriangle2Pt(
-      {x: 0.75, y: 0.75},
-      {x: 0, y: 0},
-      {x: 1, y: 0},
-      {x: 0, y: 1});
-    assertFalse(res);
-  }
-
-  function testPointInQuad() {
-    var res = base.pointInQuad2Pt(
-      {x: 0.5, y: 0.5},
-      {p1: {x: 0, y: 0},
-       p2: {x: 1, y: 0},
-       p3: {x: 1, y: 1},
-       p4: {x: 0, y: 1}});
-    assertTrue(res);
-  }
-
-  function testPointNotInQuad() {
-    var res = base.pointInQuad2Pt(
-      {x: 1.5, y: 0.5},
-      {p1: {x: 0, y: 0},
-       p2: {x: 1, y: 0},
-       p3: {x: 1, y: 1},
-       p4: {x: 0, y: 1}});
-    assertFalse(res);
+  function testNoop() {
   }
 </script>
 </body>
