--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -28,6 +28,9 @@ found in the LICENSE file.
     'about_tracing/profiling_view_test.html',
     'about_tracing/tracing_controller_test.html',
 
+    'cc/layer_impl_test.html',
+    'cc/layer_tree_impl_test.html',
+    'cc/layer_tree_host_impl_test.html',
     'cc/layer_tree_host_impl_view_test.html',
     'cc/util_test.html',
 
