--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -49,6 +49,8 @@ found in the LICENSE file.
   <script>
     base.require('about_tracing.profiling_view'); /* For deps */
     base.require('tracing.timeline_view');
+    base.require('cc.layer_tree_host_impl');
+    base.require('cc.layer_tree_host_impl_view');
   </script>
   <script>
   function getAsync(url, cb) {
