First functioning version of LayerTreeHostImplView

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -51,6 +51,8 @@ body {
 <link rel="stylesheet" href="tracing/timeline_track_view.css">
 <link rel="stylesheet" href="ui/drag_handle.css">
 <link rel="stylesheet" href="tracing/timeline_view.css">
+<link rel="stylesheet" href="ui/list_view.css">
+<link rel="stylesheet" href="ui/quad_view.css">
 <link rel="stylesheet" href="cc/layer_tree_host_impl_view.css">
 <link rel="stylesheet" href="about_tracing/profiling_view.css">
 
