--- a/trunk/src/cc/layer_tree_host_impl_view_test.html
+++ b/trunk/src/cc/layer_tree_host_impl_view_test.html
@@ -33,6 +33,8 @@ found in the LICENSE file.
       var snapshot = instance.snapshots[0];
 
       var view = new LayerTreeHostImplSnapshotView();
+      view.style.width = '800px';
+      view.style.height = '400px';
       this.addHTMLOutput(undefined, view);
       view.objectSnapshot = snapshot;
     }
