--- a/trunk/src/about_tracing/profiling_view_test.html
+++ b/trunk/src/about_tracing/profiling_view_test.html
@@ -154,7 +154,7 @@ found in the LICENSE file.
       e.categories = ['skia', 'gpu'];
       tracingController.dispatchEvent(e);
 
-      view.categorySelectionDialog_.querySelector(
+      view.recordSelectionDialog_.querySelector(
           'button.record-categories').click();
 
       assertTrue(tracingController.wasBeginTracingCalled);
@@ -182,8 +182,8 @@ found in the LICENSE file.
       e.categories = ['skia', 'gpu', 'cc', 'renderer'];
       tracingController.dispatchEvent(e);
 
-      view.categorySelectionDialog_.querySelector('input#skia').click();
-      view.categorySelectionDialog_.querySelector(
+      view.recordSelectionDialog_.querySelector('input#skia').click();
+      view.recordSelectionDialog_.querySelector(
           'button.record-categories').click();
 
       var categories = tracingController.beginTracingCategories;
@@ -205,14 +205,14 @@ found in the LICENSE file.
       e.categories = ['baz,zap', 'gpu'];
       tracingController.dispatchEvent(e);
 
-      view.categorySelectionDialog_.querySelector(
+      view.recordSelectionDialog_.querySelector(
           'button.record-categories').click();
 
-      var inputs = view.categorySelectionDialog_.querySelectorAll('input');
+      var inputs = view.recordSelectionDialog_.querySelectorAll('input');
       var inputs_length = inputs.length;
       for (var i = 0; i < inputs_length; ++i) {
         // Comes from categories and should be split before getting
-        // to the category selection dialog.
+        // to the record selection dialog.
         assertNotEquals('baz,zap', inputs[i].id);
       }
 
