--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -37,6 +37,7 @@ found in the LICENSE file.
     'tracing/category_filter_dialog_test.html',
     'tracing/filter_test.html',
     'tracing/find_control_test.html',
+    'tracing/record_selection_dialog_test.html',
     'tracing/selection_test.html',
     'tracing/timeline_track_view_test.html',
     'tracing/timeline_view_test.html',
@@ -105,6 +106,9 @@ found in the LICENSE file.
   <h1>Trace-Viewer Tests</h3>
 
   <div class="unittest">Interactive tests: <a href="interactive_tests.html" class="unittest-error-link">Run manually</a></div>
+  <div class="unittest">Record Selection Interactive Tests:
+    <a href="tracing/record_selection_dialog_interactive_tests.html"
+        class="unittest-error-link">Run manually</a></div>
   <br>
 
   <script>
