Move system and continuous tracing buttons to record dialog.
BUG=151
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/9270043

--- a/trunk/src/tracing/record_selection_dialog_interactive_tests.html
+++ b/trunk/src/tracing/record_selection_dialog_interactive_tests.html
@@ -25,9 +25,12 @@ found in the LICENSE file.
      dlg.settings = settings;
      dlg.settings_key = 'key';
      dlg.visible = true;
+     dlg.showSystemTracing = true;
      dlg.recordCallback = function() {
        var el = document.querySelector('.record-output');
-       el.innerText = "Category filter: " + dlg.categoryFilter();
+       el.innerText = "Category filter: " + dlg.categoryFilter() + "\n" +
+           "System Tracing: " + dlg.isSystemTracingEnabled() + "\n" +
+           "Continuous Tracing: " + dlg.isContinuousTracingEnabled();
      }
      dlg.updateForm_();
   }
