Fix style errors in src/ui

--- a/trunk/src/ui/quad_view_test.html
+++ b/trunk/src/ui/quad_view_test.html
@@ -46,7 +46,7 @@ found in the LICENSE file.
 
       quadView.title = 'Test Tree';
       quadView.quads = quads;
-      quadView.viewport = new QuadViewViewport(quadsBBox, 10.0)
+      quadView.viewport = new QuadViewViewport(quadsBBox, 10.0);
       quadView.deviceViewportSizeForFrame = {widht: 50,
                                              height: 30};
     }
