Fix style errors in cc

--- a/trunk/src/cc/util_test.html
+++ b/trunk/src/cc/util_test.html
@@ -45,7 +45,7 @@
       ];
       var expected = [
         {fooBar: 7},
-        {fooBar: 8},
+        {fooBar: 8}
       ];
       cc.preInitializeObject(object);
       assertObjectEquals(expected, object);
