--- a/trunk/src/tracing/analysis/analyze_slices_test.html
+++ b/trunk/src/tracing/analysis/analyze_slices_test.html
@@ -184,7 +184,7 @@ found in the LICENSE file.
          duration: 0.1,
          occurences: 2,
          details: {min: 0.04, max: 0.06, avg: 0.05,
-                   avg_stddev: 0.014142135623730947},
+                   avg_stddev: 0.014142135623730947}
         },
         t.rows[0]);
       assertObjectEquals({label: 'Selection start', time: 0}, t.rows[1]);
