--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -24,6 +24,7 @@ found in the LICENSE file.
     'ui/list_view_test.html',
     'ui/quad_view_test.html',
     'ui/quad_view_viewport_test.html',
+    'ui/toggle_button_test.html',
 
     'about_tracing/profiling_view_test.html',
     'about_tracing/tracing_controller_test.html',
