Fixup css lint errors.

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -25,10 +25,10 @@ html, body {
 }
 
 body {
-  display: -webkit-box;
   -webkit-box-orient: vertical;
-  padding: 0px;
+  display: -webkit-box;
   margin: 0;
+  padding: 0;
 }
 
 </style>
