--- a/trunk/src/tracing/model/object_instance_test.html
+++ b/trunk/src/tracing/model/object_instance_test.html
@@ -43,7 +43,7 @@ found in the LICENSE file.
       this.myFoo = this.args.foo;
     }
     MySnapshot.prototype = {
-      __proto__: tracing.model.ObjectSnapshot.prototype,
+      __proto__: tracing.model.ObjectSnapshot.prototype
     };
 
     var instance = new tracing.model.ObjectInstance(
