--- a/trunk/src/tracing/tracks/counter_track_test.html
+++ b/trunk/src/tracing/tracks/counter_track_test.html
@@ -62,8 +62,8 @@ found in the LICENSE file.
     var n = samples.length / timestamps.length;
     ctr.timestamps = timestamps;
     ctr.samples = samples;
-    ctr.seriesNames = []
-    ctr.seriesColors = []
+    ctr.seriesNames = [];
+    ctr.seriesColors = [];
     for (var i = 0; i < n; ++i) {
       ctr.seriesNames.push('value' + i);
       ctr.seriesColors.push(tracing.getStringColorId(ctr.seriesNames[i]));
@@ -104,7 +104,7 @@ found in the LICENSE file.
 
       // In bounds.
       sel = new tracing.Selection();
-      var x = (1.5/vW)*wW;
+      var x = (1.5 / vW) * wW;
       track.addIntersectingItemsInRangeToSelection(x, x + 1, y75, y75 + 1, sel);
       assertEquals(1, sel.length);
       assertEquals(track, sel[0].track);
@@ -113,12 +113,12 @@ found in the LICENSE file.
 
       // Outside bouds.
       sel = new tracing.Selection();
-      var x = (-5/vW)*wW;
+      var x = (-5 / vW) * wW;
       track.addIntersectingItemsInRangeToSelection(x, x + 1, y75, y75 + 1, sel);
       assertEquals(0, sel.length);
 
       sel = new tracing.Selection();
-      var x = (8/vW)*wW
+      var x = (8 / vW) * wW;
       track.addIntersectingItemsInRangeToSelection(x, x + 1, y75, y75 + 1, sel);
       assertEquals(0, sel.length);
     });
